--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -182,7 +182,7 @@
 
             $('#media_type-selection').on('change', function () {
                 $('#media_type-selection > label').removeClass('active');
-                var selected_filter = $('input[name=media_type-filter]:checked', '#media_type-selection');
+                let selected_filter = $('input[name=media_type-filter]:checked', '#media_type-selection');
                 $(selected_filter).closest('label').addClass('active');
                 media_type = $(selected_filter).map(function () { return $(this).val(); }).get().join(',');
                 setLocalStorage('history_media_type', media_type);
@@ -191,7 +191,7 @@
 
             $('#network_type-selection').on('change', function () {
                 $('#network_type-selection > label').removeClass('active');
-                var selected_filter = $('input[name=network_type-filter]:checked', '#network_type-selection');
+                let selected_filter = $('input[name=network_type-filter]:checked', '#network_type-selection');
                 $(selected_filter).closest('label').addClass('active');
                 network_type = $(selected_filter).map(function () { return $(this).val(); }).get().join(',');
                 setLocalStorage('history_network_type', network_type);
@@ -200,7 +200,7 @@
 
             $('#transcode_decision-selection').on('change', function () {
                 $('#transcode_decision-selection > label').removeClass('active');
-                var selected_filter = $('input[name=transcode_decision-filter]:checked', '#transcode_decision-selection');
+                let selected_filter = $('input[name=transcode_decision-filter]:checked', '#transcode_decision-selection');
                 $(selected_filter).closest('label').addClass('active');
                 transcode_decision = $(selected_filter).map(function () { return $(this).val(); }).get().join(',');
                 setLocalStorage('history_transcode_decision', transcode_decision);
@@ -213,23 +213,23 @@
             });
         }
 
-        let selected_user_id = "${_session['user_group']}" == "admin" ? null : "${_session['user_id']}";
+        const selected_user_id = "${_session['user_group']}" == "admin" ? null : "${_session['user_id']}";
 
-        let media_type = getLocalStorage('history_media_type', 'all');
+        const media_type = getLocalStorage('history_media_type', 'all');
         $.each(media_type.split(','), function (i, item) {
             let history_media_type = $('#history-media_type-' + item);
             history_media_type.prop('checked', true);
             history_media_type.closest('label').addClass('active');
         });
 
-        let network_type = getLocalStorage('history_network_type', 'all');
+        const network_type = getLocalStorage('history_network_type', '');
         $.each(network_type.split(','), function (i, item) {
             let history_network_type = $('#history-network_type-' + item);
             history_network_type.prop('checked', true);
             history_network_type.closest('label').addClass('active');
         });
 
-        let transcode_decision = getLocalStorage('history_transcode_decision', 'all');
+        const transcode_decision = getLocalStorage('history_transcode_decision', 'all');
         $.each(transcode_decision.split(','), function (i, item) {
             let history_transcode_decision = $('#history-transcode_decision-' + item.replace(' ', '_'));
             history_transcode_decision.prop('checked', true);
