--- a/data/interfaces/default/library.html
+++ b/data/interfaces/default/library.html
@@ -216,6 +216,17 @@ DOCUMENTATION :: END
                                                 </button>
                                             </div>
                                             % endif
+                                            <div class="btn-group" data-toggle="buttons" id="network_type-selection">
+                                                <label class="btn btn-dark btn-filter">
+                                                    <input type="checkbox" name="network_type-filter" id="history-network_type-lan" value="lan" autocomplete="off"><i class="fa fa-server"></i> Local Play
+                                                </label>
+                                                <label class="btn btn-dark btn-filter">
+                                                    <input type="checkbox" name="network_type-filter" id="history-network_type-wan" value="wan" autocomplete="off"><i class="fa fa-globe"></i> Remote Play
+                                                </label>
+                                                <label class="btn btn-dark btn-filter">
+                                                    <input type="checkbox" name="network_type-filter" id="history-network_type-cellular" value="cellular" autocomplete="off"><i class="fa fa-broadcast-tower"></i> Mobile Play
+                                                </label>
+                                            </div>
                                             <div class="btn-group" data-toggle="buttons" id="transcode_decision-selection">
                                                 <label class="btn btn-dark btn-filter">
                                                     <input type="checkbox" name="transcode_decision-filter" id="history-transcode_decision-direct_play" value="direct play" autocomplete="off"><i class="fa fa-play-circle"></i> Direct Play
@@ -567,7 +578,7 @@ DOCUMENTATION :: END
 
     $(".inactive-library-tooltip").tooltip();
 
-    function loadHistoryTable(transcode_decision) {
+    function loadHistoryTable(network_type, transcode_decision) {
         // Build watch history table
         history_table_options.ajax = {
             url: 'get_history',
@@ -577,6 +588,7 @@ DOCUMENTATION :: END
                     json_data: JSON.stringify( d ),
                     section_id: section_id,
                     user_id: "${history_user_id}",
+                    network_type: network_type,
                     transcode_decision: transcode_decision
                 };
             }
@@ -590,23 +602,37 @@ DOCUMENTATION :: END
 
         $('#transcode_decision-selection').on('change', function () {
             $('#transcode_decision-selection > label').removeClass('active');
-            var selected_filter = $('input[name=transcode_decision-filter]:checked', '#transcode_decision-selection');
+            let selected_filter = $('input[name=transcode_decision-filter]:checked', '#transcode_decision-selection');
             $(selected_filter).closest('label').addClass('active');
             transcode_decision = $(selected_filter).map(function () { return $(this).val(); }).get().join(',');
             setLocalStorage('library_' + section_id + 'history_transcode_decision', transcode_decision);
+            history_table.draw();
+        });
+
+        $('#network_type-selection').on('change', function () {
+            $('#network_type-selection > label').removeClass('active');
+            let selected_filter = $('input[name=network_type-filter]:checked', '#network_type-selection');
+            $(selected_filter).closest('label').addClass('active');
+            network_type = $(selected_filter).map(function () { return $(this).val(); }).get().join(',');
+            setLocalStorage('library_' + section_id + 'history_network_type', network_type);
             history_table.draw();
         });
     }
 
     $('#nav-tabs-history').on('shown.bs.tab', function() {
         if (typeof(history_table) === 'undefined') {
-            var transcode_decision = getLocalStorage('library_' + section_id + 'history_transcode_decision', 'all');
+            const transcode_decision = getLocalStorage('library_' + section_id + 'history_transcode_decision', 'all');
             $.each(transcode_decision.split(','), function (i, item) {
-                var history_transcode_decision = $('#history-transcode_decision-' + item.replace(' ', '_'));
+                let history_transcode_decision = $('#history-transcode_decision-' + item.replace(' ', '_'));
                 history_transcode_decision.prop('checked', true);
                 history_transcode_decision.closest('label').addClass('active');
             });
-
+            const network_type = getLocalStorage('library_' + section_id + 'history_network_type', 'all');
+            $.each(network_type.split(','), function (i, item) {
+                let history_network_type = $('#history-network_type-' + item);
+                history_network_type.prop('checked', true);
+                history_network_type.closest('label').addClass('active');
+            });
             loadHistoryTable(transcode_decision);
         }
     });
