hide not needed options on lib stats graph tab

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -588,6 +588,8 @@
         function loadGraphsTab1(time_range, yaxis) {
             $('#days-selection').show();
             $('#months-selection').hide();
+            $('#user-selection').show();
+            $('#yaxis-selection').show();
 
             setGraphFormat(yaxis);
 
@@ -681,6 +683,8 @@
         function loadGraphsTab2(time_range, yaxis) {
             $('#days-selection').show();
             $('#months-selection').hide();
+            $('#user-selection').show();
+            $('#yaxis-selection').show();
 
             setGraphFormat(yaxis);
 
@@ -774,6 +778,8 @@
         function loadGraphsTab3(time_range, yaxis) {
             $('#days-selection').hide();
             $('#months-selection').show();
+            $('#user-selection').show();
+            $('#yaxis-selection').show();
 
             setGraphFormat(yaxis);
 
@@ -801,6 +807,8 @@
 
             // Fixed as graph uses own measurement 'addition count' with formatting of 'plays'
             setGraphFormat("plays");
+            $('#user-selection').hide();
+            $('#yaxis-selection').hide();
 
             var _graph_1_call = $.ajax({
                 url: "get_additions_by_date",
